<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_account"
        android:icon="@mipmap/user_icon"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_syslog"
        android:icon="@mipmap/fingerprint_icon"
        android:title="@string/title_syslog" />

    <item
        android:id="@+id/navigation_changeuser"
        android:icon="@mipmap/change_user_icon"
        android:title="@string/title_changeuser" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_setting" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@mipmap/info_icon"
        android:title="@string/title_info" />


</menu>
