<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/userImg"
            android:layout_width="match_parent"
            android:layout_height="419dp"
            android:contentDescription="@string/todo"
            tools:src="@mipmap/user_image" />

        <TextView
            android:id="@+id/userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/def_uid"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize"
            android:visibility="visible" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/def_username"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize"
            android:visibility="visible" />

        <TextView
            android:id="@+id/userdepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/def_department"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize"
            android:visibility="visible" />

    </LinearLayout>

</FrameLayout>