<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".InfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/LBU_logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:src="@mipmap/leeds_beckett_logo" />

        <TextView
            android:id="@+id/app_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/app_v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/def_version_value"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/app_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_author"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/app_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_publisher"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textColor" />

        <ImageView
            android:id="@+id/HKCT_logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:src="@mipmap/hkct_logo" />

    </LinearLayout>

</FrameLayout>